# creative-muse-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  DEVCONTAINER.md  DEVCONTAINER_QUICKSTART.md  DEVCONTAINER_RESTART.md  FRONTEND_FEATURES.md  FUTURE_FEATURES.md  MIGLIORAMENTI_DEVCONTAINER.md  MULTILINGUAL_SUPPORT.md  Makefile  QUICKSTART_ADVANCED.md  README.md  SECURITY_SETUP.md  SECURITY_VULNERABILITIES.md  TRAEFIK_DOMAINS.md  creative-muse-ai-concept.md  docker-compose.production.yml  docker-compose.yml  load_env.sh  pyproject.toml  requirements.txt  security-config.yaml
.devcontainer/: .dockerignore  .flake8  .pre-commit-config.yaml  BACKEND_START_GUIDE.md  DATABASE_ADMIN_INTEGRATION.md  Dockerfile  NETWORK_TROUBLESHOOTING.md  README.md  TRAEFIK_SETUP.md  TROUBLESHOOTING.md  bashrc_functions.sh  dev-scripts.sh  devcontainer.json  docker-compose.yml  init-database.sh  restart-traefik.sh  setup-hosts.sh  setup.sh  simple-test.sh  start-react-dev.sh  traefik.yml
.github/workflows/: ci-cd.yml
ai_core/: .env.example  .flake8  =2.1.0  =2.8.0  =4.1.0  =7.0.0  DEPLOYMENT_GUIDE.md  Dockerfile  README_UNIFIED.md  SECURITY_SETUP.md  admin_service.py  auth_service.py  config.py  feature_flags_service.py  feature_middleware.py  main.py  main_llm.py  main_mistral_api.py  main_multi_model.py  main_multilingual.py  main_original_backup.py  main_simple.py  main_subscription.py  main_unified.py  model_manager.py  multilingual_support.py  package-lock.json  rate_limit_admin.py  rate_limiter.py  requirements-security.txt  requirements.txt  sample_dataset.csv  setup_subscription_plans.py  test_rate_limiting.py  test_simple.py  test_unified.py  training_service.py
ai_core/config/: email_config.py
ai_core/database/: creative_muse.db-shm  creative_muse.db-wal
ai_core/middleware/: __init__.py
ai_core/routers/: __init__.py  admin.py  ai.py  auth.py  subscription.py  training.py
ai_core/security/: __init__.py  audit_logger.py  crypto_manager.py  key_manager.py  session_manager.py
ai_core/security/certificates/: certificate_info.json
ai_core/security/keys/: keys_metadata.json  master.checksum  master.salt
ai_core/services/: __init__.py  auth_service.py  model_manager.py
ai_core/utils/: __init__.py
creative-muse-modern/: Dockerfile  FRONTEND_IMPROVEMENTS.md  INTEGRATION_COMPLETE.md  README.md  jest.config.js  jest.setup.js  next.config.js  next.config.ts  package-lock.json  package.json
creative-muse-modern/src/__tests__/: example.test.tsx
creative-muse-modern/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
creative-muse-modern/src/components/: AdvancedPromptSettings.tsx  (+19 more)
creative-muse-react/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
creative-muse-react/src/: App.css  App.tsx  index.css  main.tsx
database/: init_db.py  schema.sql
docs/: ADVANCED_STREAMING_FEATURES.md  DEPLOYMENT.md  MULTI_MODEL_SUPPORT.md  NEXTJS_FRONTEND.md  RATE_LIMITING_IMPLEMENTATION.md  REACT_FRONTEND.md
nginx/: nginx.conf
scripts/: README_MODELS.md  backup_script.py  deploy.py  download_models.py  key_generation.py  load_env.py  performance_optimizer.py  security_audit.py  setup_nextjs.py  setup_react.py  system_monitor.py  update_database.py
security/certificates/: certificate_info.json
ui_frontend/: index.html  index_advanced.html  package.json
(+55 files in other folders)
